--- a/web/style.css
+++ b/web/style.css
@@ -1,5 +1,6 @@
+@import url('win/style.css');
+
 body {
-  background-color: #333;
   margin: 0;
   padding: 0;
   width: 100vw;
@@ -7,7 +8,4 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-canvas {
-  background-color: black;
 }
