deploy: 49f5e7712d4e676534c748dfec351de28cb4d781

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('win/style.css');
+
 body {
-  background-color: #333;
+  background-color: #666;
   margin: 0;
   padding: 0;
   width: 100vw;
@@ -8,6 +10,9 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 canvas {
+  flex-grow: 1;
   background-color: black;
 }
+
